Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-85683

Windows: "Unable to enumerate family" for fonts with lengthy family name

XMLWordPrintable

    • 29b2387587fe2ed2a73bdcbfa928acb755537284 (qt/qtbase/dev) c688bcb2f60274bf4e746d5b434ed637d59fe31a (qt/qtbase/6.0) d95c152256e69b1d5c2d3249348eeea2f1f5cccd (qt/tqtc-qtbase/tqtc/lts-5.15)

      Windows font database is tries to register extra names for fonts. For families with long names this may result in an attempt to register a too long name which would cause a warning:

      qt.qpa.fonts: Unable to enumerate family ' "Droid Sans Mono Dotted for Powerline" '

      The issue can be reproduced at least with the font mentioned above in the warning. If it's installed all that's required to reproduce the warning is to run the attached app.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kleint Friedemann Kleint
            miikapernu Miika Pernu
            Votes:
            2 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: