Windows font engine: Silence warnings about not being able to enumate font families

Turn the warning into a qCDebug() statement and add explanatory comment.

Fixes: QTBUG-85683
Change-Id: I2a6a7a089a660294f3e9c3096299c75635b3b215
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>
(cherry picked from commit 29b2387587fe2ed2a73bdcbfa928acb755537284)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>